cluster/apps/omniboard/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: omniboard
  labels:
    app: omniboard

spec:
  replicas: 1
  selector:
    matchLabels:
      app: omniboard
  template:
    metadata:
      labels:
        app: omniboard
    spec:
      containers:
        - name: omniboard
          image: vivekratnavel/omniboard:latest
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 5m
              memory: 64Mi
            limits:
              cpu: 20m
              memory: 256Mi
