cluster/apps/omniboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omniboard
  labels:
    app: omniboard

spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
  selector:
    app: omniboard
