cluster/apps/omniboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omniboard
  labels:
    app: omniboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - omniboard.kblb.io
      secretName: my-certs-omniboard
  rules:
    - host: omniboard.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omniboard
                port:
                  name: http
